# syld

./: Cargo.toml  README.md  hk.pkl  mise.toml
.github/workflows/: ci.yml  release.yml
schemas/: report.v1.json
src/: config.rs  lib.rs  main.rs  storage.rs
src/budget/: mod.rs
src/contribute/: github_good_first_issues.rs  mod.rs
src/discover/: apt.rs  brew.rs  dnf.rs  docker.rs  flatpak.rs  mise.rs  mod.rs  nix.rs  oci.rs  pacman.rs  podman.rs  snap.rs
src/enrich/: github.rs  liberapay.rs  license_classify.rs  mod.rs  open_collective.rs
src/project/: mod.rs
src/report/: html.rs  json.rs  mod.rs  terminal.rs
systemd/: syld.service  syld.timer
tests/: config_cli.rs  report_cli.rs
