[package]
name = "syld"
version = "0.1.0"
edition = "2024"
description = "Support Your Linux Desktop — discover and support the open source you use"
license = "GPL-3.0-or-later"
repository = "https://github.com/bombfork/syld"
keywords = ["linux", "opensource", "donations", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
comfy-table = "7"
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
anyhow = "1"
rayon = "1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.1.2"
jsonschema = "0.28"
predicates = "3.1.4"
tempfile = "3.25.0"
